--- a/helm_charts/mdss/templates/config-template.yml
+++ b/helm_charts/mdss/templates/config-template.yml
@@ -30,8 +30,6 @@ data:
 
     location /api {
         proxy_pass http://apigateway;
-        proxy_set_header Host            $host;
-        proxy_set_header X-Forwarded-For $remote_addr;
     }
 
     location /callback {
@@ -44,6 +42,7 @@ data:
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
         proxy_http_version 1.1;
+        proxy_cache_bypass $http_upgrade;
     }
 
     }
@@ -67,8 +66,6 @@ data:
 
         location /api {
             proxy_pass http://apigateway;
-            proxy_set_header Host            $host;
-            proxy_set_header X-Forwarded-For $remote_addr;
         }
 
         location /callback {
@@ -81,6 +78,7 @@ data:
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
             proxy_http_version 1.1;
+            proxy_cache_bypass $http_upgrade;
         }
     }
 
