--- a/helm_charts/mdcore/templates/ingress-template.yml
+++ b/helm_charts/mdcore/templates/ingress-template.yml
@@ -7,7 +7,14 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: {{ .Values.core_ingress.class }}
     ingress.kubernetes.io/rewrite-target: /
+    {{ if and (.Values.core_ingress.tls) (eq .Values.core_ingress.class "nginx") }}
+    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
+    {{ end }}
+
 spec:
+  {{ if .Values.core_ingress.rules }}
+  rules: {{ .Values.core_ingress.rules }}
+  {{ else }}
   rules:
   - host: {{ .Values.core_ingress.host | replace "<APP_NAMESPACE>" .Release.Namespace }}
     http:
@@ -19,4 +26,11 @@ spec:
               name: {{ .Values.core_ingress.service }}
               port:
                 number: {{ .Values.core_ingress.port }}
+  {{ end }}
+  {{ if .Values.core_ingress.tls }}
+  tls:
+  - hosts:
+    - {{ .Values.core_ingress.host | replace "<APP_NAMESPACE>" .Release.Namespace }}
+    secretName: {{ .Values.core_ingress.secret }}
+  {{ end }}
 {{ end }}
