--- a/helm_charts/mdcore/values.yaml
+++ b/helm_charts/mdcore/values.yaml
@@ -93,6 +93,12 @@ core_ingress:
   class: nginx                      # Sets the ingress class
   tls: false                        # Flag for set up tls section in ingress
   secret: mdcore-tls                # SecretName of the tls secret created to be used for ingress
+  ingress_annotations: 
+    kubernetes.io/ingress.class: nginx          # Indicate class for the controller
+    ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/backend-protocol: HTTPS # When MetaDefender Core deployment is running with TLS enabled 
+    nginx.ingress.kubernetes.io/affinity: cookie     # To set affinity when having more than one pod running behind the ingress
+
 
 ## Uncomment if you want to use a private repo (it must already be configured in the cluster as a secret)
 # imagePullSecrets:
